# ArmFoundry

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/libero_ee_trajectories/: metadata.json
data/libero_ee_trajectories_armforge/: metadata.json
docs/: canonical-tool-frame-mapping.md  guide.md  real-robot-baseline-semantics.md  recent-work-summary.md
docs/agents/: domain.md  issue-tracker.md
outputs/libero_ddird/: baseline_results.csv  baseline_results_by_suite.csv  baseline_trajectory_results.csv  best_design.json  data_audit.md  extracted_data_stats.json  optimization_results.csv  optimization_test_comparison.csv  report.md  report_results.csv
outputs/libero_ddird_armforge/: data_audit.md  extracted_data_stats.json
outputs/libero_ddird_armforge_goal20/: baseline_results.csv  baseline_results_by_suite.csv  baseline_trajectory_results.csv
outputs/libero_ddird_armforge_object20/: baseline_results.csv  baseline_results_by_suite.csv  baseline_trajectory_results.csv
outputs/libero_ddird_armforge_sample/: baseline_results.csv  baseline_results_by_suite.csv  baseline_trajectory_results.csv
outputs/libero_ddird_armforge_spatial20/: baseline_results_by_suite.csv
outputs/libero_panda_fk_check/: panda_fk_check.csv  panda_fk_summary.json
outputs/server_all1500_wp80_it35_w16/: analysis_report.md  (+3 more)
tests/: test_dataset.py  test_evaluator.py  test_kinematics.py  test_mjcf_base_search.py  test_mjcf_fk_check.py  test_mjcf_kinematics.py  test_tool_frame_mapping.py  test_tool_frame_metadata.py  test_ur5e_tcp_generation.py  test_xarm6_model_generation.py
(+1712 files in other folders)
