[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "armfoundry"
version = "0.1.0"
description = "A minimal DDIRD prototype for evaluating robot-arm designs on end-effector trajectory distributions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
libero = [
    "h5py>=3.10",
]
mujoco = [
    "mujoco>=3.2",
]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
